[package]
name = "nostrum-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the nostrum crate"
categories = []
keywords = []
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/ryo33/nostrum"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [] }

[dev-dependencies]
pretty_assertions = "1.4.0"
